Modify Appearance of app (because its night time so its dark mode time)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,10 +18,10 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* align-items: center;
+  justify-content: center; */
+  /* font-size: calc(10px + 2vmin); */
+  color: #00a1ce;
 }
 
 .App-link {
